# molyuu-bar

./: Cargo.toml  README.md  TODO.md  build.rs  flake.nix  start-niri.sh
icons/: resources.gresource.xml
src/: main.rs
src/ipc/: event.rs  mod.rs  niri.rs
src/service/: event.rs  mod.rs  niri.rs
src/service/network/: devices.rs  ethernet.rs  mod.rs  wireless.rs
src/service/network/endpoints/: command.rs  event.rs  inter.rs  mod.rs
src/service/network/wireless/: ap.rs  connect.rs  mod.rs  prelude.rs  radio.rs  scan.rs  sync.rs  watchdog.rs
src/tests/: mod.rs  wifi.rs
src/utils/: strings.rs
src/widgets/: current_window.rs  mod.rs  workspace.rs
src/widgets/panel/: datetime.rs  mod.rs  network.rs  power.rs
src/windows/: bar.rs
styles/: bar.scss  component.scss  current_window.scss  lib.scss  panel.scss  workspace.scss
styles/colors/: base16.scss
styles/functions/: math.scss  reset.scss
