[package]
name = "molyuu-bar-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
glib = "0.20.10"
gtk4 = { version = "0.9.6", features = ["v4_12"] }
gtk4-layer-shell = "0.5.0"
niri-ipc = "25.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
smol = "2.0.2"
unstacked = "0.1.2"

[build-dependencies]
glib-build-tools = "0.20.0"
