[package]
name = "molyuu-bar-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
async-trait = "0.1.88"
bimap = "0.6.3"
chrono = "0.4.41"
futures-lite = "2.6.0"
futures-util = "0.3.31"
gtk4 = { version = "0.9.6", features = ["v4_12"] }
gtk4-layer-shell = "0.5.0"
lazy_static = "1.5.0"
log = "0.4.27"
niri-ipc = "25.2.0"
num_enum = "0.7.3"
num_enum_derive = "0.7.3"
rusty_network_manager = "0.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
smol = "2.0.2"
smol-timeout = "0.6.1"
uuid = { version = "1.16.0", features = ["v4"] }
zbus = "4.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
once_cell = "1.21.3"

[build-dependencies]
glib-build-tools = "0.20.0"
